# solo_eps

./: CMakeLists.txt  README.md
fsw/mission_inc/: solo_eps_app_perfids.h
fsw/platform_inc/: solo_eps_app_msgids.h  solo_eps_app_platform_cfg.h
fsw/src/: solo_eps_app.c  solo_eps_app.h  solo_eps_app_events.h  solo_eps_app_msg.h  solo_eps_app_version.h  solo_eps_device.c  solo_eps_device.h  solo_eps_device_msg.h
gsw/SOLO_EPS/cmd_tlm/: SOLO_EPS_CMD.txt  SOLO_EPS_TLM.txt
sim/: CMakeLists.txt  README.md
sim/inc/: solo_eps_42_data_provider.hpp  solo_eps_data_point.hpp  solo_eps_hardware_model.hpp
sim/src/: solo_eps_42_data_provider.cpp  solo_eps_data_point.cpp  solo_eps_hardware_model.cpp  solo_eps_sim.cpp
